@@ -30,14 +30,14 @@ import org.apache.hadoop.chukwa.datacollection.agent.ChukwaAgent;
 import org.apache.hadoop.chukwa.datacollection.controller.ChukwaAgentController;
 import org.apache.hadoop.chukwa.datacollection.connector.ChunkCatcherConnector;
 
-public class TestFileTailingAdaptors extends TestCase {
+public class TestLogRotate extends TestCase {
   ChunkCatcherConnector chunks;
-  public TestFileTailingAdaptors() {
+  public TestLogRotate() {
     chunks = new ChunkCatcherConnector();
     chunks.start();
   }
 
-  public void testCrSepAdaptor() throws IOException, InterruptedException, ChukwaAgent.AlreadyRunningException {
+  public void testLogRotate() throws IOException, InterruptedException, ChukwaAgent.AlreadyRunningException {
     ChukwaAgent  agent = new ChukwaAgent();
     // Remove any adaptor left over from previous run
     ChukwaConfiguration cc = new ChukwaConfiguration();
@@ -46,7 +46,7 @@ public class TestFileTailingAdaptors extends TestCase {
     cli.removeAll();
     // sleep for some time to make sure we don't get chunk from existing streams
     Thread.sleep(5000);
-    File testFile = makeTestFile("/tmp/chukwaCrSepTest",80);
+    File testFile = makeTestFile("/tmp/chukwaLogRotateTest",80);
     long adaptorId = agent.processCommand("add org.apache.hadoop.chukwa.datacollection.adaptor.filetailer.CharFileTailingAdaptorUTF8" +
         " lines " + testFile + " 0");
     assertTrue(adaptorId != -1);
@@ -56,7 +56,7 @@ public class TestFileTailingAdaptors extends TestCase {
     while(!c.getDataType().equals("lines")) {
         c = chunks.waitForAChunk();
     }
-    assertTrue(c.getSeqID() == testFile.length());    
+    assertTrue(c.getSeqID() == testFile.length());	  
     assertTrue(c.getRecordOffsets().length == 80);
     int recStart = 0;
     for(int rec = 0 ; rec < c.getRecordOffsets().length; ++rec) {
@@ -65,7 +65,23 @@ public class TestFileTailingAdaptors extends TestCase {
       assertTrue(record.equals(rec + " abcdefghijklmnopqrstuvwxyz\n"));
       recStart = c.getRecordOffsets()[rec] +1;
     }
-    assertTrue(c.getDataType().equals("lines"));    
+    assertTrue(c.getDataType().equals("lines"));
+    testFile = makeTestFile("/tmp/chukwaLogRotateTest",40);
+    c = chunks.waitForAChunk(); 
+    System.out.println("got chunk");
+    while(!c.getDataType().equals("lines")) {
+        c = chunks.waitForAChunk();
+    }
+    //assertTrue(c.getSeqID() == testFile.length());	  
+    assertTrue(c.getRecordOffsets().length == 40);
+    recStart = 0;
+    for(int rec = 0 ; rec < c.getRecordOffsets().length; ++rec) {
+      String record = new String(c.getData(), recStart, c.getRecordOffsets()[rec] - recStart+1);
+      System.out.println("record "+ rec+ " was: " + record);
+      assertTrue(record.equals(rec + " abcdefghijklmnopqrstuvwxyz\n"));
+      recStart = c.getRecordOffsets()[rec] +1;
+    }
+    assertTrue(c.getDataType().equals("lines"));
     agent.stopAdaptor(adaptorId, false);
     agent.shutdown();
   }
@@ -86,8 +102,8 @@ public class TestFileTailingAdaptors extends TestCase {
   
   public static void main(String[] args) {
     try {
-      TestFileTailingAdaptors tests = new TestFileTailingAdaptors();
-      tests.testCrSepAdaptor();
+      TestLogRotate tests = new TestLogRotate();
+      tests.testLogRotate();
     } catch(Exception e) {
       e.printStackTrace();
     }
